--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next --turbopack",
     "build": "next build",
+    "postbuild": "pagefind --site .next/server/app --output-path public/_pagefind",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,6 +27,7 @@
     "@types/react-dom": "^19.1.6",
     "eslint": "^9.30.1",
     "eslint-config-next": "15.3.4",
+    "pagefind": "^1.3.0",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
   }
