--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroui/react": "2.8.0-beta.11",
+    "@vercel/analytics": "^1.5.0",
     "framer-motion": "^12.23.0",
     "next": "15.3.5",
     "next-svgr": "^0.0.2",
