--- a/package.json
+++ b/package.json
@@ -10,20 +10,27 @@
   },
   "dependencies": {
     "@heroui/react": "2.8.0-beta.11",
+    "@heroui/use-theme": "^2.1.10",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.4.4",
+    "@types/mdx": "^2.0.13",
     "@vercel/analytics": "^1.5.0",
-    "framer-motion": "^12.23.0",
-    "next": "15.3.5",
+    "framer-motion": "^12.23.11",
+    "next": "15.4.4",
     "next-svgr": "^0.0.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "next-themes": "^0.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "remark-gfm": "^4.0.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20.19.4",
+    "@types/node": "^20.19.9",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "eslint": "^9.30.1",
+    "eslint": "^9.32.0",
     "eslint-config-next": "15.3.4",
     "tailwindcss": "^4.1.11",
     "typescript": "^5.8.3"
